--- a/Otel/Otel.UI/Views/Shared/_Layout.cshtml
+++ b/Otel/Otel.UI/Views/Shared/_Layout.cshtml
@@ -266,8 +266,16 @@
         });
     </script>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let url = window.location.pathname.toLowerCase();
+            let homeLink = document.querySelector("#navigation li a.nav-link");
 
-
+            if (homeLink && (url.includes("specialoffer") || url.includes("room"))) {
+                homeLink.innerHTML = '<i class="fa fa-home" style="font-size:28px;"></i>';
+                homeLink.style.color = "black";
+            }
+        });
+    </script>
 </body>
-
 </html>
